add nav and home

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,4 @@
-<nav>
-    <button>
-        <a routerLink="/home">home</a>
-    </button>
-</nav>
-
-<router-outlet />
+<div class="relative min-h-screen h-0">
+    <app-nav />
+    <router-outlet />
+</div>
