--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,10 @@
-<button (click)="log('hi')">home works!</button>
+<main
+    class="flex flex-col grow justify-center items-start lg:px-[10%] bg-gray-200"
+>
+    <p class="font-display font-extralight text-6xl leading-tight">
+        Hi There!
+        <br />
+        I'm <span class="text-orange-500">Carson</span> Krueger.
+    </p>
+    <p class="font-body text-xl">I am a Full-Stack Developer.</p>
+</main>
