--- a/src/app/nav/nav-item/nav-item.component.html
+++ b/src/app/nav/nav-item/nav-item.component.html
@@ -1,1 +1,8 @@
-<p>nav-item works!</p>
+<button
+    class="flex justify-center items-center p-2 gap-2 rounded-md font-body text-lg"
+    [class.flex-row-reverse]="reversed"
+    (click)="handleClick ? handleClick($event) : null"
+>
+    <ng-content />
+    <a [routerLink]="navTo ? navTo : null">{{ navText }}</a>
+</button>
