Fix home page to render full screen

--- a/src/app/nav/nav/nav.component.html
+++ b/src/app/nav/nav/nav.component.html
@@ -1,5 +1,5 @@
 <nav
-    class="flex items-center justify-between gap-2 bg-white sticky top-0 p-2 shadow-lg lg:px-[10%]"
+    class="flex items-center justify-between gap-2 bg-white sticky top-0 p-2 shadow-lg lg:px-[10%] z-50"
 >
     <h2 class="font-body text-lg">Carson</h2>
     <ul class="flex gap-2">
