--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="relative min-h-screen h-0">
+<div class="flex flex-col relative h-full">
     <app-nav />
     <router-outlet />
 </div>
