--- a/src/app/nav/nav/nav.component.html
+++ b/src/app/nav/nav/nav.component.html
@@ -5,7 +5,7 @@
     <ul class="flex gap-2">
         <app-nav-item navText="About" />
         <app-nav-item navText="Skills" />
-        <app-nav-item navText="Exerience" />
+        <app-nav-item navText="Experience" />
         <app-nav-item navText="Projects" />
         <app-nav-item navText="Contact" />
     </ul>
