fix serving of client

--- a/front-end/src/app/nav/nav-item/nav-item.component.html
+++ b/front-end/src/app/nav/nav-item/nav-item.component.html
@@ -1,8 +1,10 @@
-<button
-    class="flex justify-center items-center p-2 gap-2 rounded-md font-body text-lg"
-    [class.flex-row-reverse]="reversed"
-    (click)="handleClick ? handleClick($event) : null"
->
-    <ng-content />
-    <a [routerLink]="navTo ? navTo : null">{{ navText }}</a>
-</button>
+<a [routerLink]="navTo ? navTo : null">
+    <button
+        class="flex justify-center items-center p-2 gap-2 rounded-md font-body text-lg"
+        [class.flex-row-reverse]="reversed"
+        (click)="handleClick ? handleClick($event) : null"
+    >
+        <ng-content />
+        {{ navText }}
+    </button>
+</a>
