--- a/front-end/src/app/nav/nav/nav.component.html
+++ b/front-end/src/app/nav/nav/nav.component.html
@@ -3,7 +3,7 @@
 >
     <h2 class="font-body text-lg">Carson</h2>
     <ul class="flex gap-2">
-        <app-nav-item navText="About" />
+        <app-nav-item navText="About" navTo="/home" />
         <app-nav-item navText="Skills" />
         <app-nav-item navText="Experience" />
         <app-nav-item navText="Projects" />
