--- a/front-end/src/app/home/home.component.css
+++ b/front-end/src/app/home/home.component.css
@@ -1,3 +1,3 @@
 :host {
-    @apply page justify-center items-start lg:px-[10%] bg-gray-200;
+    @apply page justify-center items-start lg:px-[10%] bg-black;
 }
