--- a/front-end/src/app/home/home.component.html
+++ b/front-end/src/app/home/home.component.html
@@ -1,30 +1,27 @@
-<div>
+<div class="flex justify-center items-center gap-[10%]">
     <section class="flex flex-col">
         <p class="font-display font-extralight text-6xl leading-tight">
             Hi There!
             <br />
-            I'm <span class="text-orange-500">Carson</span> Krueger.
+            I'm <span class="text-purple-500">Carson</span> Krueger.
         </p>
         <p class="font-body text-xl">I am a Full-Stack Developer.</p>
 
         <div class="flex gap-3 py-4">
-            <app-icon
-                [inputClass]="secondaryColorClass"
-                href="https://www.linkedin.com/in/carson-krueger-pog/"
+            <button
+                class="flex items-center gap-2 px-3 py-2 rounded-lg border-purple-600 border-2 font-body text-purple-500"
             >
-                <img src="linkedin.svg" [width]="imgSize" [height]="imgSize" />
-            </app-icon>
-
-            <app-icon
-                [inputClass]="secondaryColorClass"
-                href="https://github.com/carsonkrueger"
-            >
-                <img src="github.svg" [width]="imgSize" [height]="imgSize" />
-            </app-icon>
-
-            <app-icon [inputClass]="secondaryColorClass">
-                <img src="github.svg" [width]="imgSize" [height]="imgSize" />
-            </app-icon>
+                Resume
+                <img src="resume.svg" class="h-6 w-6" />
+            </button>
         </div>
+    </section>
+
+    <section class="flex flex-col basis-1/3">
+        <p class="font-body text-xl">
+            Experienced Computer Science graduate from Utah Valley University.
+            Motivated to create and learn new technologies. Excited to meet and
+            connect with new developers.
+        </p>
     </section>
 </div>
