change home bg and colors

--- a/front-end/src/app/home/home.component.html
+++ b/front-end/src/app/home/home.component.html
@@ -3,13 +3,13 @@
         <p class="font-display font-extralight text-6xl leading-tight">
             Hi There!
             <br />
-            I'm <span class="text-purple-500">Carson</span> Krueger.
+            I'm <span class="text-secondary">Carson</span> Krueger.
         </p>
         <p class="font-body text-xl">I am a Full-Stack Developer.</p>
 
         <div class="flex gap-3 py-4">
             <button
-                class="flex items-center gap-2 px-3 py-2 rounded-lg border-purple-600 border-2 font-body text-purple-500"
+                class="flex items-center gap-2 px-3 py-2 rounded-lg border-secondary border-2 font-body text-secondary"
             >
                 Resume
                 <img src="resume.svg" class="h-6 w-6" />
