--- a/front-end/src/app/nav/nav/nav.component.html
+++ b/front-end/src/app/nav/nav/nav.component.html
@@ -3,7 +3,8 @@
 >
     <div class="flex flex-col justify-center items-center gap-2">
         <img src="me.png" class="rounded-full h-16 w-16 object-cover" />
-        <h2 class="font-body text-lg">Carson Krueger</h2>
+        <h2 class="md:block hidden font-body text-secondary">Carson Krueger</h2>
+        <h2 class="md:block hidden font-body">Crkruege&#64;gmail.com</h2>
     </div>
 
     <ul class="flex flex-col items-center gap-2">
@@ -32,7 +33,7 @@
             <img src="github.svg" class="h-[24px] w-[24px]" />
         </app-nav-item>
         <app-nav-item navTo="/home">
-            <img src="github.svg" class="h-[24px] w-[24px]" />
+            <img src="linkedin.svg" class="h-[24px] w-[24px]" />
         </app-nav-item>
     </ul>
 </nav>
