separate home into about and skills components

--- a/front-end/src/app/home/home.component.css
+++ b/front-end/src/app/home/home.component.css
@@ -1,3 +1,3 @@
 :host {
-    @apply page justify-center items-start lg:px-[10%] bg-peaks object-contain bg-center bg-fixed bg-cover md:bg-auto;
+    @apply page justify-center items-start bg-peaks object-contain bg-center bg-fixed bg-cover md:bg-auto;
 }
