--- a/front-end/src/app/app.component.html
+++ b/front-end/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="flex flex-col relative h-full">
+<div class="flex flex-col relative h-full w-full">
     <app-nav />
     <router-outlet />
 </div>
