--- a/front-end/src/app/home/home.component.html
+++ b/front-end/src/app/home/home.component.html
@@ -1,29 +1,2 @@
-<div
-    class="flex flex-col md:flex-row p-[10%] gap-[5%] justify-center items-center h-screen"
->
-    <section class="flex flex-col">
-        <p class="font-display font-extralight text-6xl leading-tight">
-            Hi There!
-            <br />
-            I'm <span class="text-secondary">Carson</span> Krueger.
-        </p>
-        <p class="font-body text-xl">A Full-Stack Developer.</p>
-
-        <div class="flex gap-3 py-4">
-            <button
-                class="flex items-center gap-2 px-3 py-2 rounded-lg border-secondary border-2 font-body text-secondary"
-            >
-                Resume
-                <img src="resume.svg" class="h-6 w-6" />
-            </button>
-        </div>
-    </section>
-
-    <section class="flex flex-col basis-1/3 justify-center">
-        <p class="font-body text-xl">
-            Experienced Computer Science graduate from Utah Valley University.
-            Motivated to create and learn new technologies. Excited to meet and
-            connect with new developers.
-        </p>
-    </section>
-</div>
+<app-about />
+<app-skills />
