--- a/front-end/src/app/nav/nav-item/nav-item.component.html
+++ b/front-end/src/app/nav/nav-item/nav-item.component.html
@@ -1,6 +1,6 @@
 <a [routerLink]="navTo ? navTo : null">
     <button
-        class="flex justify-center items-center p-2 gap-2 rounded-md font-body text-lg"
+        class="flex justify-center items-center p-2 gap-2 rounded-md font-body text-lg animate-all"
         [class.flex-row-reverse]="reversed"
         (click)="handleClick ? handleClick($event) : null"
     >
