--- a/front-end/src/app/nav/nav/nav.component.html
+++ b/front-end/src/app/nav/nav/nav.component.html
@@ -1,5 +1,5 @@
 <nav
-    class="flex flex-col justify-between items-center gap-2 fixed py-4 md:px-5 left-0 top-0 z-50 h-screen w-mobile-nav-width md:w-nav-width backdrop-blur-sm shadow-md"
+    class="flex flex-col justify-between items-center gap-2 fixed py-4 md:px-5 left-0 top-0 z-50 h-screen w-mobile-nav-width md:w-nav-width backdrop-blur-sm shadow-lg"
 >
     <div class="flex flex-col justify-center items-center gap-2">
         <img
