--- a/front-end/src/app/skills/skills.component.html
+++ b/front-end/src/app/skills/skills.component.html
@@ -1,3 +1,6 @@
-<div class="flex flex-col h-screen bg-primary-lo w-full">
-    <p>skills works!</p>
+<div class="relative h-screen">
+    <h1 class="page-header">Skills</h1>
+    <div class="flex flex-col bg-primary-lo w-full h-full nav-padding">
+        <app-skill-item name="Rust" progress="50%" />
+    </div>
 </div>
