--- a/front-end/src/styles.css
+++ b/front-end/src/styles.css
@@ -36,4 +36,8 @@
     .nav-padding {
         @apply pl-mobile-nav-width md:pl-nav-width;
     }
+
+    .page-header {
+        @apply sticky top-4 pr-5 text-right font-body text-xl text-secondary;
+    }
 }
