--- a/front-end/src/app/about/about.component.html
+++ b/front-end/src/app/about/about.component.html
@@ -14,6 +14,7 @@
             <div class="flex gap-3 py-4">
                 <button
                     class="flex items-center gap-2 px-3 py-2 rounded-lg border-secondary border-2 font-body text-secondary"
+                    (click)="downloadResume()"
                 >
                     Resume
                     <img src="resume.svg" class="h-6 w-6" />
