--- a/front-end/src/app/about/about.component.html
+++ b/front-end/src/app/about/about.component.html
@@ -1,6 +1,5 @@
-<h1 class="page-header">About</h1>
 <div
-    class="flex flex-col md:flex-row gap-[5%] justify-center items-center h-full"
+    class="flex flex-col md:flex-row gap-[5%] justify-center items-center h-full px-1"
 >
     <section class="flex flex-col">
         <p class="font-display font-extralight text-6xl leading-tight">
