--- a/front-end/src/app/skills/skills.component.html
+++ b/front-end/src/app/skills/skills.component.html
@@ -1,7 +1,5 @@
-<div class="flex flex-col justify-center items-center h-full pt-12 pb-24">
-    <h1 class="font-body text-2xl w-full text-center pb-12 px-2">
-        Tools & Skills
-    </h1>
+<div class="flex flex-col justify-center items-center h-full pb-24">
+    <h1 class="page-header">Tools & Skills</h1>
     <div class="grid grid-cols-3 gap-4 w-[80%] md:w-[55%] pb-16">
         @for (skill of skills; track skill.name; let idx = $index) {
             @if (idx < numFeaturedSkills) {
