--- a/front-end/src/app/experiences/experiences.component.html
+++ b/front-end/src/app/experiences/experiences.component.html
@@ -1,1 +1,6 @@
-<p>experiences works!</p>
+<h1 class="page-header">Experience</h1>
+<ul class="flex flex-col pb-32">
+    @for (item of items$ | async; track item.name; let idx = $index) {
+        <app-experience-item [item]="item" />
+    }
+</ul>
