--- a/front-end/src/app/project-item/project-item.component.html
+++ b/front-end/src/app/project-item/project-item.component.html
@@ -1,4 +1,4 @@
-<div class="flex gap-4 justify-center w-full">
+<div class="flex flex-col sm:flex-row gap-4 justify-center w-full">
     <a
         [attr.href]="item?.linkUrl !== undefined ? item?.linkUrl : null"
         target="_blank"
