--- a/front-end/src/app/experience-item/experience-item.component.html
+++ b/front-end/src/app/experience-item/experience-item.component.html
@@ -1,12 +1,13 @@
 <div class="flex w-full px-2 lg:px-[25%] items-stretch gap-4">
     <!-- side bar -->
-    <div class="relative flex justify-center w-3 h-auto">
-        <div class="absolute size-[6px] rounded-full bg-white"></div>
+    <div class="flex flex-col items-center w-[4px] h-auto">
+        <!-- <div class="size-[6px] rounded-full bg-white"></div> -->
         <div class="w-[2px] rounded-full bg-white h-full"></div>
+        <div class="size-[8px] rounded-full bg-white"></div>
     </div>
 
     <!-- main content -->
-    <div class="flex flex-col pb-12">
+    <div class="flex flex-col pb-12 justify-end h-auto">
         <p class="font-display text-xl">{{ item.name }}</p>
         <p class="font-body text-lg">{{ item.from }} - {{ item.to }}</p>
         <ul>
