--- a/front-end/src/app/about/about.component.html
+++ b/front-end/src/app/about/about.component.html
@@ -1,5 +1,6 @@
 <div
     class="flex flex-col md:flex-row gap-[5%] justify-center items-center h-full px-1"
+    #aboutRef
 >
     <section class="flex flex-col">
         <p class="font-display font-extralight text-6xl leading-tight">
