--- a/front-end/src/app/skills/skills.component.html
+++ b/front-end/src/app/skills/skills.component.html
@@ -1,4 +1,4 @@
-<div class="flex flex-col justify-center items-center h-full pb-24">
+<div class="flex flex-col justify-center items-center h-full pb-24" #skillsRef>
     <h1 class="page-header">Tools & Skills</h1>
     <div class="grid grid-cols-3 gap-4 w-[80%] md:w-[55%] pb-16">
         @for (skill of skills; track skill.name; let idx = $index) {
