--- a/front-end/src/app/nav/nav/nav.component.html
+++ b/front-end/src/app/nav/nav/nav.component.html
@@ -18,10 +18,10 @@
         <app-nav-item [handleClick]="onSkillsClick">
             <img src="tool.svg" class="h-[24px] w-[24px]" />
         </app-nav-item>
-        <app-nav-item>
-            <img src="github.svg" class="h-[24px] w-[24px]" />
+        <app-nav-item [handleClick]="onProjectsClick">
+            <img src="rocket.svg" class="h-[24px] w-[24px]" />
         </app-nav-item>
-        <app-nav-item>
+        <app-nav-item [handleClick]="onExperiencesClick">
             <img src="github.svg" class="h-[24px] w-[24px]" />
         </app-nav-item>
         <app-nav-item>
