add briefcase & plane icon. Add scroll to contact

--- a/front-end/src/app/nav/nav/nav.component.html
+++ b/front-end/src/app/nav/nav/nav.component.html
@@ -22,10 +22,10 @@
             <img src="rocket.svg" class="h-[24px] w-[24px]" />
         </app-nav-item>
         <app-nav-item [handleClick]="onExperiencesClick">
-            <img src="github.svg" class="h-[24px] w-[24px]" />
+            <img src="briefcase.svg" class="h-[24px] w-[24px]" />
         </app-nav-item>
-        <app-nav-item>
-            <img src="github.svg" class="h-[24px] w-[24px]" />
+        <app-nav-item [handleClick]="onContactClick">
+            <img src="plane.svg" class="h-[24px] w-[24px]" />
         </app-nav-item>
     </ul>
 
