--- a/front-end/src/app/contact/contact.component.html
+++ b/front-end/src/app/contact/contact.component.html
@@ -1,5 +1,6 @@
 <form
     class="max-w-[90%] md:max-w-96 flex flex-col gap-4 justify-center items-center mx-auto pt-16 pb-32"
+    #contactRef
 >
     <h1 class="text-2xl font-body text-secondary pb-12">Contact Me</h1>
     <label class="text-start w-full">From</label>
