--- a/front-end/src/app/nav/nav-item/nav-item.component.html
+++ b/front-end/src/app/nav/nav-item/nav-item.component.html
@@ -1,4 +1,4 @@
-<a [routerLink]="navTo ? navTo : null">
+<a [routerLink]="navTo ? navTo : null" target="_blank">
     <button
         class="flex justify-center items-center p-2 gap-2 rounded-md font-body text-lg animate-all"
         [class.flex-row-reverse]="reversed"
