--- a/front-end/src/app/nav/nav/nav.component.html
+++ b/front-end/src/app/nav/nav/nav.component.html
@@ -30,14 +30,22 @@
     </ul>
 
     <ul>
-        <app-nav-item>
+        <app-nav-item [handleClick]="this.navService.downloadResume">
             <img src="resume.svg" class="h-[24px] w-[24px]" />
         </app-nav-item>
-        <app-nav-item>
+        <a
+            class="flex justify-center items-center p-2 gap-2 rounded-md font-body text-lg animate-all"
+            href="https://github.com/carsonkrueger"
+            target="_blank"
+        >
             <img src="github.svg" class="h-[24px] w-[24px]" />
-        </app-nav-item>
-        <app-nav-item>
+        </a>
+        <a
+            class="flex justify-center items-center p-2 gap-2 rounded-md font-body text-lg animate-all"
+            href="https://www.linkedin.com/in/carson-krueger-pog"
+            target="_blank"
+        >
             <img src="linkedin.svg" class="h-[24px] w-[24px]" />
-        </app-nav-item>
+        </a>
     </ul>
 </nav>
